# streamlit_deeplinker

./: README.md  pyproject.toml
.github/workflows/: publish.yml
example/: deeplink.py
streamlit_deeplinker/: __init__.py  router.py
tests/: test_router.py
